# Waveshare-SIM

./: .gitignore  README.MD  pins_arduino.h
Diagrams/: block_diagram.drawio
Waveshare/ESP32-S3-A-SIM7670X-4G-example/: sdkconfig  sdkconfig.old
Waveshare/ESP32-S3-A-SIM7670X-4G-example/main/: CMakeLists.txt  app_main.c  idf_component.yml
Waveshare/Support Arduino Scripts/Hard-serial-esp32-7670/: call.ino  hard-7670-gps.ino  sms.ino
bat/: bat.ino
spiffs/: index.html  login.html  wlan.html
spiffs/js/: index.js  login.js  wlan.js
